--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css"
   </head>
   <body>
+    <nav class="navbar navbar-inverse bg-primary">
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Features</a>
+    </nav>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top"> 
         <a class="navbar-brand" href="#">Facebook</a>                                
         <div class="col-5">       
