--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <nav class="navbar navbar-inverse bg-primary">
+        <a class="nav-link" href="#">AAAAAAA</a>
         <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">BBBBBBBBB</a>
         <a class="nav-link" href="#">Features</a>
     </nav>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top"> 
