--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css"
   </head>
   <body>
-    <nav class="navbar navbar-inverse bg-primary">
-        <a class="nav-link" href="#">AAAAAAA</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">BBBBBBBBB</a>
-        <a class="nav-link" href="#">Features</a>
-    </nav>
+    <ul class="nav nav-pills nav-stacked">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="#">Profile</a></li>
+        <li role="presentation"><a href="#">Messages</a></li>
+    </ul>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary fixed-top"> 
         <a class="navbar-brand" href="#">Facebook</a>                                
         <div class="col-5">       
