--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css"
   </head>
   <body>
-    <ul class="nav nav-pills nav-stacked">
+    <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#">Home</a></li>
         <li role="presentation"><a href="#">Profile</a></li>
         <li role="presentation"><a href="#">Messages</a></li>
