--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link </span></a></li>
-        <li><a href="#">Link</a></li>
+        
         <li class="dropdown">
-          <a href="#">Dropdown </span></a>
+          <a href="#">Dropdown </a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
