--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <ul class="nav navbar-nav">
         
         <li class="dropdown">
-          <a href="#">Dropdown </a>
+          <a href="#">Dropdown</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
+            <h1>Action</h1>
+            <li>Another action</li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
