--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         
-        <li class="dropdown">
-          <a href="#">Dropdown</a>
+        <li>Dropdown</a>
           <ul class="dropdown-menu">
-            <h1>Action</h1>
+            <li>Action</li>
             <li>Another action</li>
-            <li><a href="#">Something else here</a></li>
+            <li>Something else here</li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
