--- a/index.html
+++ b/index.html
@@ -28,12 +28,58 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
+      <li>Dropdown</a>
+          <ul class="dropdown-menu">
+            <li>Action</li>
+            <li>Another action</li>
+            <li>Something else here</li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <li>Dropdown</a>
+          <ul class="dropdown-menu">
+            <li>Action</li>
+            <li>Another action</li>
+            <li>Something else here</li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <li>Dropdown</a>
+          <ul class="dropdown-menu">
+            <li>Action</li>
+            <li>Another action</li>
+            <li>Something else here</li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      
+      <div class="container">
+
+      <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+      </div>
+
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      
+
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
