--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
 
-                            <li>Dropdown</a>
+                            <li>연락처</a>
                                 <ul class="dropdown-menu">
-                                    <li>Action</li>
-                                    <li>Another action</li>
-                                    <li>Something else here</li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li>휴대폰 : 010-6396-4898</li>
+                                    <li>이메일 : jm97@naver.com</li>
+                                    <li>       jmwhdals97@gmail.com</li>
                                 </ul>
                             </li>
                         </ul>
@@ -43,15 +39,10 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
 
-                            <li>Dropdown</a>
+                            <li>학력</a>
                                 <ul class="dropdown-menu">
-                                    <li>Action</li>
-                                    <li>Another action</li>
-                                    <li>Something else here</li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="http://sit.yonsei.ac.kr/">연세대학교 글로벌융합공학부</a> 16학번</li>
+                                    <li><a href="http://www.sshs.hs.kr/index/index.do#pop_header">서울과학고등학교</a> 25기</li>
                                 </ul>
                             </li>
                         </ul>
@@ -60,10 +51,10 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
 
-                            <li>Dropdown</a>
+                            <li>주소</a>
                                 <ul class="dropdown-menu">
-                                    <li>Action</li>
-                                    <li>Another action</li>
+                                    <li>경기도 과천시</li>
+                                    <li>현 주소 : 인천광역시 연수구 송도과학로85 연세대 국제캠퍼스 <a href="https://yicdorm.yonsei.ac.kr">송도학사</a>n</li>
                                     <li>Something else here</li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
