--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                                 <ul class="dropdown-menu">
                                     <li>휴대폰 : 010-6396-4898</li>
                                     <li>이메일 : jm97@naver.com</li>
-                                    <li>       jmwhdals97@gmail.com</li>
+                                    <li>카카오톡 : jmwhdals97@gmail.com</li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
-
+                    <hr />
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
 
@@ -47,19 +47,14 @@
                             </li>
                         </ul>
                     </div>
-
+                    <hr />
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
 
                             <li>주소</a>
                                 <ul class="dropdown-menu">
                                     <li>경기도 과천시</li>
-                                    <li>현 주소 : 인천광역시 연수구 송도과학로85 연세대 국제캠퍼스 <a href="https://yicdorm.yonsei.ac.kr">송도학사</a>n</li>
-                                    <li>Something else here</li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li>현 주소 : 인천광역시 연수구 송도과학로85 연세대 국제캠퍼스 <a href="https://yicdorm.yonsei.ac.kr">송도학사</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -116,7 +111,9 @@
                 </div>
         </div>
         </div>
-        <!-- jQuery first, then Tether, then Bootstrap JS. -->
+        <footer>
+            <p>@Sandwich Project</p>
+        </footer>
     </body>
 
 </html>
