--- a/index.html
+++ b/index.html
@@ -21,64 +21,65 @@
 
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
+                    <div class="row">
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-
-                            <li>연락처</a>
-                                <ul class="dropdown-menu">
-                                    <li>휴대폰 : 010-6396-4898</li>
-                                    <li>이메일 : jm97@naver.com</li>
-                                    <li>카카오톡 : jmwhdals97@gmail.com</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <hr />
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-
-                            <li>학력</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="http://sit.yonsei.ac.kr/">연세대학교 글로벌융합공학부</a> 16학번</li>
-                                    <li><a href="http://www.sshs.hs.kr/index/index.do#pop_header">서울과학고등학교</a> 25기</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <hr />
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-
-                            <li>주소</a>
-                                <ul class="dropdown-menu">
-                                    <li>경기도 과천시</li>
-                                    <li>현 주소 : 인천광역시 연수구 송도과학로85 연세대 국제캠퍼스 <a href="https://yicdorm.yonsei.ac.kr">송도학사</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-
-                            <li>Dropdown</a>
-                                <ul class="dropdown-menu">
-                                    <li>Action</li>
-                                    <li>Another action</li>
-                                    <li>Something else here</li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
+                                <li>연락처</a>
+                                    <ul class="dropdown-menu">
+                                        <li>휴대폰 : 010-6396-4898</li>
+                                        <li>이메일 : jm97@naver.com</li>
+                                        <li>카카오톡 : jmwhdals97@gmail.com</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <hr />
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+
+                                <li>학력</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="http://sit.yonsei.ac.kr/">연세대학교 글로벌융합공학부</a> 16학번</li>
+                                        <li><a href="http://www.sshs.hs.kr/index/index.do#pop_header">서울과학고등학교</a> 25기</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <hr />
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+
+                                <li>주소</a>
+                                    <ul class="dropdown-menu">
+                                        <li>경기도 과천시</li>
+                                        <li>현 주소 : 인천광역시 연수구 송도과학로85 연세대 국제캠퍼스 <a href="https://yicdorm.yonsei.ac.kr">송도학사</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+
+                                <li>Dropdown</a>
+                                    <ul class="dropdown-menu">
+                                        <li>Action</li>
+                                        <li>Another action</li>
+                                        <li>Something else here</li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a href="#">Separated link</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a href="#">One more separated link</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
                     </div>
                 </div>
         </div>
