--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet">
-     </head>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" </head>
 
     <body>
 
         <div class="container">
 
             <div class="starter-template">
-                <h1>Bootstrap ㅁㄴㅇㄹstarter template</h1>
+                <h1>Bootstrap starter template</h1>
                 <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
                     HTML document.</p>
             </div>
