--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
                     HTML document.</p>
             </div>
-
-            <nav class="navbar navbar-default">
+            </br>
+            <nav class="navbar">
                 <div class="container-fluid">
                     <div class="row">
                         <!-- Collect the nav links, forms, and other content for toggling -->
