--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
             <div class="starter-template">
                 <h1>박종민</h1>
-                <small> Park Jong-Min</small>
+                <small style="color: gray"> Park Jong-Min</small>
             </div>
-            </br>
+            <hr>
             <nav class="navbar">
                 <div class="container-fluid">
                     <div class="row">
