--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css" </head>
-
+    <style>
+    .container {
+      margin-top: 20px;
+    }
+    li {
+      font-size: 15px;
+    }
+    body {
+      line-height: 2em;
+    }
+    h6 {
+      margin-top: 30px;
+    }
+    </style>
     <body>
 
         <div class="container">
 
             <div class="starter-template">
-                <h1>박종민</h1>
+                <h1 size="">박종민</h1>
                 <small style="color: gray"> Park Jong-Min</small>
             </div>
             <hr>
