--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css" </head>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" 
     <style>
     .container {
       margin-top: 20px;
+    }
+    h6 {
+      font-size: 24px;
     }
     li {
       font-size: 15px;
@@ -22,6 +25,8 @@
       margin-top: 30px;
     }
     </style>
+    </head>
+    
     <body>
 
         <div class="container">
