--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <div class="starter-template">
-                <h1 size="30px">박종민</h1>
+                <h2>박종민</h2>
                 <small style="color: gray"> Park Jong-Min</small>
             </div>
             <hr>
