--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <div class="starter-template">
-                <h2>박종민</h2>
+                <h1>박종민</h1>
                 <small style="color: gray"> Park Jong-Min</small>
             </div>
             <hr>
@@ -63,15 +63,14 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
 
-                                <li>Dropdown</a>
+                                <li>관심사</a>
                                     <ul class="dropdown-menu">
-                                        <li>Action</li>
-                                        <li>Another action</li>
-                                        <li>Something else here</li>
+                                        <li>컴퓨터 프로그래밍</li>
+                                        <li>웹 디자인</li>
+                                        <li>영상처리</li>
+                                        
                                         <li role="separator" class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                        <li role="separator" class="divider"></li>
-                                        <li><a href="#">One more separated link</a></li>
+                                        <li><a href="http://kr.blizzard.com/ko-kr/">컴퓨터 게임</a></li>
                                     </ul>
                                 </li>
                             </ul>
