--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        .navbar {
+            background-color: #4878c4;
+        }
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,8 +73,6 @@
                                         <li>컴퓨터 프로그래밍</li>
                                         <li>웹 디자인</li>
                                         <li>영상처리</li>
-                                        
-                                        <li role="separator" class="divider"></li>
                                         <li><a href="http://kr.blizzard.com/ko-kr/">컴퓨터 게임</a></li>
                                     </ul>
                                 </li>
