--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
 
             <div class="template">
-                <h1>박종민</h1>
+                <h1 style="color:whitesmoke">박종민</h1>
                 <small style="color: gray"> Park Jong-Min</small>
             </div>
             <hr>
