--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </style>
         <div class="container">
 
-            <div class="template">
+            <div class="templete">
                 <h1 style="color:whitesmoke">박종민</h1>
                 <small style="color: gray"> Park Jong-Min</small>
             </div>
